Fixing footer anchor and main content overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -20,7 +20,6 @@
 }
 
 .navbar-fixed-bottom, footer {
-    position: relative;
 	background-color: #000000;
     text-align: center;
     clear:both;
