--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@ body {
   padding-top: 70px;
 }
 
+.fit-main {
+	margin-bottom: 100px;
+}
+
 .navbar-default .navbar-nav > li > a {
   color: #333;
   border-bottom: 1px solid transparent;
